--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9091
 
-security.oauth2.resource.token-info-uri=http://localhost:8080/oauth/check_token
-security.oauth2.client.client-id=resourceserver
-security.oauth2.client.client-secret=resourceserversecret
+spring.datasource.url=jdbc:mysql://localhost/spring_security?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=123456
