--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,2 @@
 server.port=9091
-
-security.oauth2.resource.token-info-uri=http://localhost:8080/oauth/check_token
-security.oauth2.client.client-id=resourceserver
-security.oauth2.client.client-secret=resourceserversecret
+jwt.key=MjWP5L7CiD
